--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -227,7 +227,9 @@
         "newAddressButton": "New Address",
         "addressLabel": "Address label",
         "createNewAddressNotice": "Give your new DFI address a meaningful label",
-        "createNewReceiveAddressLabel": "Create new receive address"
+        "createNewReceiveAddressLabel": "Create new receive address",
+        "backButton": "Back",
+        "createButton": "Create"
       },
       "paymentRequests": {
         "time": "Zeit",
