--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -126,7 +126,7 @@
         "yesButtonText": "Weiter",
         "masternodeOperator": "Master-Knoten Betreiber",
         "masternodeOwner": "Master-Knoten Besitzer",
-        "backToMasternodePage": "Zurück zu Master-Knoten Seite",
+        "backToMasternodePage": "Schließen",
         "restartNodeButton": "Restart node",
         "masterNodeSuccess": "You can manually set masternode config in defi.conf or you can automatic set this masternode config by restarting the node.",
         "collaterAddress": "Collateral Address",
