--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -126,7 +126,7 @@
         "yesButtonText": "Continue",
         "masternodeOperator": "Masternode Operator",
         "masternodeOwner": "Masternode Owner",
-        "backToMasternodePage": "Back to Masternode Page",
+        "backToMasternodePage": "Close",
         "restartNodeButton": "Restart node",
         "masterNodeSuccess": "You can manually set masternode config in defi.conf or you can automatic set this masternode config by restarting the node.",
         "collaterAddress": "Collateral Address",
