--- a/webapp/src/translations/languages/fr.json
+++ b/webapp/src/translations/languages/fr.json
@@ -126,7 +126,7 @@
         "yesButtonText": "Continuer",
         "masternodeOperator": "Opérateur du nœud complet",
         "masternodeOwner": "Propriétaire du nœud complet",
-        "backToMasternodePage": "Retour à la page du nœud complet",
+        "backToMasternodePage": "Proche",
         "restartNodeButton": "Redémarrer le nœud",
         "masterNodeSuccess": "Vous pouvez définir manuellement la configuration du nœud sous defi.conf ou la définir automatiquement en redémarrant le nœud.",
         "collaterAddress": "Collateral Address",
@@ -195,7 +195,10 @@
       "light": "Clair",
       "dark": "Sombre",
       "unsavedChanges": "Vous avez des changements non sauvegardés",
-      "saveSettings": "Sauvegarder les paramètres"
+      "saveSettings": "Sauvegarder les paramètres",
+      "network": "Réseau",
+      "mainnet": "Mainnet",
+      "testnet": "Testnet"
     },
     "wallet": {
       "sendPage": {
