replace other to network and reduce cron time for fetching balance

--- a/webapp/src/translations/languages/fr.json
+++ b/webapp/src/translations/languages/fr.json
@@ -158,7 +158,7 @@
       },
       "masternodeTab": {
         "myMasternodes": "Mienne",
-        "otherMasterNodes": "Autre"
+        "network": "Réseau"
       }
     },
     "settings": {
