--- a/webapp/src/translations/languages/de.json
+++ b/webapp/src/translations/languages/de.json
@@ -158,7 +158,7 @@
       },
       "masternodeTab": {
         "myMasternodes": "Bergwerk",
-        "otherMasterNodes": "Andere"
+        "network": "Netzwerk"
       }
     },
     "settings": {
