--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -158,7 +158,7 @@
       },
       "masternodeTab": {
         "myMasternodes": "Mine",
-        "otherMasterNodes": "Other"
+        "network": "Network"
       }
     },
     "settings": {
