Modification in Token Info according to response

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -221,6 +221,9 @@
         "id": "ID",
         "decimals": "Decimals",
         "holders": "Holders",
+        "limit": "Limit",
+        "minitingSupport": "Minting Support",
+        "tradeable": "Trade-able?",
         "marketCap": "Market Cap",
         "volume": "Volume (24 H)",
         "officialSite": "Official site",
