--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -211,7 +211,12 @@
         "tradeable": "Trade-able?",
         "dfiRequired": "DFI required",
         "collateralAddress": "Collateral Address",
-        "collateralAddressError": "Minimum 1000 DFI is required"
+        "collateralAddressError": "Minimum 1000 DFI is required",
+        "createTokenButton": "CREATE TOKEN",
+        "confirmationText": "Are you sure you want to create a token?",
+        "tokenSuccess": "Token is Created Successfully",
+        "tokenHash": "Token Hash",
+        "backToTokenPage": "Back To Token Page"
       },
       "tokenInfo": {
         "back": "BACK",
