Refactor reducer, autoUpdater and saga

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -340,6 +340,7 @@
     "yesShowUpdateAvailableButton": "Yes, Upgrade Now",
     "noShowUpdateAvailableButton": "No",
     "startUpdateLabel": "Initiating Update",
-    "closeBtnLabel": "Close"
+    "closeBtnLabel": "Close",
+    "downloadingUpdate": "Downloading update..."
   }
 }
