--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -335,10 +335,10 @@
     "addressIsNotAPartOfWallet": "%{addressName} is not a part of wallet.",
     "updateAppNoticeline1": "You need to restart app to see the new update.",
     "updateAppNoticeline2": "Do you want to restart?",
-    "yesUpdateAppNotice": "Yes, Restart",
+    "yesUpdateAppNotice": "Yes",
     "noUpdateAppNotice": "No",
-    "showUpdateAvailableNotice": "A new version of Defi is available. Would you like to upgrade?",
-    "yesShowUpdateAvailableButton": "Yes, Upgrade Now",
+    "showUpdateAvailableNotice": "A new version of Defi is available. Would you like to update?",
+    "yesShowUpdateAvailableButton": "Yes",
     "noShowUpdateAvailableButton": "No",
     "startUpdateLabel": "Initiating Update",
     "closeBtnLabel": "Close",
