WIP Reindex modal to give user option to reindex

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -331,6 +331,10 @@
     "restartNode": "Restarting Node",
     "nodeDisconnected": "Node is disconnected",
     "electronRequiredError": "Electron app is needed for restart",
-    "addressIsNotAPartOfWallet": "%{addressName} is not a part of wallet."
+    "addressIsNotAPartOfWallet": "%{addressName} is not a part of wallet.",
+    "restartAppWithReindexNoticeline1": "You need to restart app with reindex option",
+    "restartAppWithReindexNoticeline2": "Do you want to restart with reindex option?",
+    "yesRestartAppWithReindex": "Yes",
+    "noCloseApp": "No"
   }
 }
