--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -332,8 +332,8 @@
     "nodeDisconnected": "Node is disconnected",
     "electronRequiredError": "Electron app is needed for restart",
     "addressIsNotAPartOfWallet": "%{addressName} is not a part of wallet.",
-    "restartAppWithReindexNoticeline1": "You need to restart app with reindex option",
-    "restartAppWithReindexNoticeline2": "Do you want to restart with reindex option?",
+    "restartAppWithReindexNoticeline1": "Corrupted block database detected. Please restart with -reindex or -reindex-chainstate to recover.",
+    "restartAppWithReindexNoticeline2": "Do you want to restart?",
     "yesRestartAppWithReindex": "Yes",
     "noCloseApp": "No"
   }
