--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -333,19 +333,20 @@
     "nodeDisconnected": "Node is disconnected",
     "electronRequiredError": "Electron app is needed for restart",
     "addressIsNotAPartOfWallet": "%{addressName} is not a part of wallet.",
-    "updateAppNoticeline1": "You need to restart app to see the new update.",
-    "updateAppNoticeline2": "Do you want to restart?",
+    "updateAppNoticeTitle": "Update complete",
+    "updateAppNotice": "You need to restart app to see the new update. Do you want to restart?",
     "yesUpdateAppNotice": "Yes",
     "noUpdateAppNotice": "No",
-    "showUpdateAvailableNotice": "A new version of Defi is available. Would you like to update?",
+    "showUpdateAvailableHeader": "Update available",
+    "showUpdateAvailableNotice": "A new version of Defi app is available. Would you like to update?",
     "yesShowUpdateAvailableButton": "Yes",
     "noShowUpdateAvailableButton": "No",
     "startUpdateLabel": "Initiating Update",
     "closeBtnLabel": "Close",
-    "downloadingUpdate": "Downloading update...",
-    "restartAppWithReindexNoticeline1": "Corrupted block database detected. Please restart with -reindex or -reindex-chainstate to recover.",
-    "restartAppWithReindexNoticeline2": "Do you want to restart?",
-    "yesRestartAppWithReindex": "Yes",
-    "noCloseApp": "No"
+    "downloadingUpdate": "Downloading update",
+    "reindexModelHeader": "Error occurred",
+    "restartAppWithReindexNotice": "Corrupted block database detected. Please restart with -reindex or -reindex-chainstate to recover. Do you want to restart?",
+    "yesRestartAppWithReindex": "Restart app",
+    "noCloseApp": "Quit app"
   }
 }
