--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -346,6 +346,7 @@
     "noShowUpdateAvailableButton": "Not now",
     "startUpdateLabel": "Initiating Update",
     "closeBtnLabel": "Close",
+    "minimizeBtnLabel": "Minimize",
     "downloadingUpdate": "Downloading update",
     "reindexModelHeader": "Error occurred",
     "restartAppWithReindexNotice": "Corrupted block database detected. Please restart with -reindex or -reindex-chainstate to recover. Do you want to restart?",
