Added condition for different tokens

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -322,9 +322,10 @@
     },
     "wallet": {
       "sendPage": {
-        "sendDFITitle": "Send DFI – DeFi Blockchain Client",
+        "sendTitle": "Send – DeFi Blockchain Client",
         "wallet": "Wallet",
         "sendDFI": "Send DFI",
+        "send": "Send",
         "amount": "Amount",
         "dFI": "DFI",
         "max": "MAX",
