Feature/implement bip39 (#74)
* Add mnemonic methods

* Add base wallet page UI

* Added Create New Wallet and Verify Mnemonic Components

* Fix: Responsiveness of create wallet page

* Made changes in the VerifyMnemonic component

* Add rpc and utility methods

* Update create wallet and verify mnemonic page

* Fix: Design Breakpoints

* Fix: Design Breakpoints

* Added Functionality in mnemonic verification

* Added verify mnemonic check

* Update verify mnemonic page

* Update handleUnselect function

* WIP: Update create HD wallet UI and utility methods

* Move mnemonic class from webapp to electron

* Add network parameter

* Add backup wallet warning model

* Update test case for wallet page

* Add create and restore wallet UI and utility methods

Co-authored-by: Saurabh Shinde <saurabhshinde391@gmail.com>

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -203,9 +203,43 @@
       "regnet": "Regnet"
     },
     "wallet": {
+      "createOrRestoreWalletPage": {
+        "title": "Wallet - Create or restore wallet",
+        "createOrRestoreWallet": "Create or restore wallet",
+        "createANewWallet": "Create a new wallet",
+        "restoreWalletFromMnemonicSeed": "Restore wallet from mnemonic seed"
+      },
+      "createNewWalletPage": {
+        "back": "BACK",
+        "title": "Wallet - Create a new wallet",
+        "createANewWallet": "Create a new wallet",
+        "mnemonicGuideline": "Write down the following 24 words below. It is important to write them down in the exact order as displayed. This 24 - word mnemonic seed will be used to recover or transfer your wallet. Without it, you will not be able to recover your wallet. Don't lose it.",
+        "generateNewSet": "Generate a new set of 24 words",
+        "copied24Words": "I've have copied down 24 words in the exact order",
+        "continue": "CONTINUE",
+        "createNewWallet": "Create New Wallet"
+      },
+      "verifyMnemonicPage": {
+        "back": "BACK",
+        "title": "Wallet - Verify mnemonic seed",
+        "verifyMnemonicSeed": "Verify mnemonic seed",
+        "verifyMnemonicGuideline": "To ensure you have written down your 24-word mnemonic seed, please pick out 6 of the words in your mnemonic seed, in the list below.",
+        "showAgain": "Show me my 24 words again",
+        "creatingYourWallet": "Creating your wallet",
+        "backToWalletPage": "CLOSE"
+      },
+      "restoreWalletPage": {
+        "back": "BACK",
+        "title": "Wallet - Restore wallet",
+        "restoreWallet": "Restore wallet",
+        "restoreWalletGuideLine": "Enter the 24 words in your mnemonic seed to restore wallet.",
+        "restoringWallet": "Restoring wallet",
+        "restore": "RESTORE",
+        "backToWalletPage": "CLOSE"
+      },
       "sendPage": {
-        "sendDFITitle": "Send DFI – DeFi Blockchain Client",
         "wallet": "Wallet",
+        "sendDFITitle": "Send DFI – DeFi Blockchain Client",
         "sendDFI": "Send DFI",
         "amount": "Amount",
         "dFI": "DFI",
@@ -356,6 +390,10 @@
     "backupWalletNotice": "Please backup your wallet before updating your app in order to prevent from any mishap. Do you want to backup your wallet?",
     "backupWalletDatNotice": "Your wallet is not ready yet. Do you want to backup your wallet.dat file?",
     "yesBackupWalletNotice": "Yes",
-    "noBackupWalletNotice": "No"
+    "noBackupWalletNotice": "No",
+    "backupWalletWarningModelHeader": "Backup wallet",
+    "saveMyBackup": "Save my backup",
+    "okIHaveDoneIt": "Ok, I have done it",
+    "backupWalletWarning": "Please backup your existing wallet before creating or restoring a new wallet."
   }
 }
