Add loader before showing masternode data and add instant balance and pending balance fetch actions (#2)
Co-authored-by: Harsh Rathi <fullstackninja864@gmail.com>

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -114,7 +114,8 @@
         "operatorAddress": "Operator Address",
         "registered": "Registered",
         "mintedBlocks": "Minted Blocks",
-        "noMasterNodes": "No Masternodes Available"
+        "noMasterNodes": "No Masternodes Available",
+        "loading": "Loading..."
       },
       "createMasterNode": {
         "title": "Create Master Node",
