Added language varaibles

--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -22,6 +22,7 @@
       "masterNodes": "Masternodes",
       "blockchain": "Blockchain",
       "tokens": "Tokens",
+      "swap": "Swap",
       "exchange": "Exchange",
       "help": "Help",
       "settings": "Settings",
@@ -278,6 +279,54 @@
         "dragAndUploadCSV": "Drag or choose a CSV file to upload.",
         "verifyingCollateral": "Verifying Collateral",
         "chooseFile": "Choose File"
+      }
+    },
+    "swap": {
+      "swapPage": {
+        "title": "Tokens – DeFi Blockchain Client",
+        "swap": "Swap",
+        "pool": "Pool",
+        "liquidity": "Liquidity",
+        "enterAnAmount": "Enter an amount to swap",
+        "continue": "Continue",
+        "from": "From",
+        "to": "To",
+        "balance": "Balance",
+        "max": "Max",
+        "selectToken": "Select a Token",
+        "searchToken": "Search token name or address",
+        "popular": "Popular",
+        "tokens": "Tokens",
+        "readySwap": "Ready to swap",
+        "price": "Price",
+        "minimumReceived": "Minimum Received",
+        "priceImpact": "Price Impact",
+        "liquidityProviderFee": "Liquidity provider fee",
+        "verifyTransactionSwap": "Please verify transaction and press SWAP",
+        "yourLiquidity": "Your Liquidity",
+        "noLiquidity": "No liquidity found. Would you like to add liquidity to the pool?",
+        "add": "Add",
+        "remove": "Remove",
+        "pooledDFI": "Pooled DFI",
+        "pooledDOO": "Pooled DOO",
+        "poolReward": "Pool reward",
+        "poolShare": "Pool share"
+      },
+      "addLiquidity": {
+        "balance": "Balance",
+        "max": "Max",
+        "selectToken": "Select a Token",
+        "addLiquidity": "Add Liquidity",
+        "selectInputTokens": "Select input tokens and enter an amount",
+        "back": "Back",
+        "input": "Input",
+        "shareOfPool": "Share of pool",
+        "readyToSupply": "Ready to supply",
+        "verifyTransactionSupply": "Please verify transaction and press SUPPLY",
+        "reward": "Reward",
+        "deposits": "Deposits",
+        "rates": "Rates",
+        "continue": "Continue"
       }
     },
     "settings": {
