--- a/webapp/src/translations/languages/en.json
+++ b/webapp/src/translations/languages/en.json
@@ -372,9 +372,9 @@
     "electronRequiredError": "Electron app is needed for restart",
     "addressIsNotAPartOfWallet": "%{addressName} is not a part of wallet.",
     "updateAppNoticeTitle": "Update complete",
-    "updateAppNotice": "You need to restart app to see the new update. Do you want to restart?",
-    "yesUpdateAppNotice": "Yes",
-    "noUpdateAppNotice": "No",
+    "updateAppNotice": "You need to restart DeFi app to apply new update. Do you want to restart?",
+    "restartNowNotice": "Restart now",
+    "restartLaterNotice": "Later",
     "showUpdateAvailableHeader": "An update is available for DeFi app",
     "showUpdateAvailableNotice": "Would you like to update?",
     "yesShowUpdateAvailableButton": "Update",
@@ -392,13 +392,13 @@
     "backupWalletDatNotice": "Your wallet is not ready yet. Do you want to backup your wallet.dat file?",
     "yesBackupWalletNotice": "Yes",
     "noBackupWalletNotice": "No",
-    "backupWalletWarningModelHeader": "Backup wallet",
-    "saveMyBackup": "Save my backup",
-    "okIHaveDoneIt": "Ok, I have done it",
-    "backupWalletWarning": "Please backup your existing wallet before creating or restoring a new wallet.",
-    "restartWalletModalHeader": "Restart App",
-    "restartWalletWarningNotice": "You need to restart app. Do you want to restart, now?",
-    "yesRestartWalletNotice": "Yes",
-    "noRestartWalletNotice": "No"
+    "backupWalletWarningModelHeader": "Wallet backup warning",
+    "backupNow": "Backup now",
+    "skipBackup": "Skip backup",
+    "backupWalletWarning": "Creating a new wallet or restoring one will override any existing wallets in the app. Do you want to backup your existing wallet?",
+    "restartWalletModalHeader": "Restart required",
+    "restartWalletWarningNotice": "You need to restart DeFi app. Do you want to restart?",
+    "yesRestartWalletNotice": "Restart now",
+    "noRestartWalletNotice": "Later"
   }
 }
